@@ -39,3 +39,6 @@ Parse do procedure without parameters w/test
 Parse do procedure with parameters w/test
 PublicCommand
 Parse public var1,var2 w/test
+
+2009-12-11
+Public variable with test SimplePublicVariable.prg
